// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup should disable animations 1`] = `
<div
  class="css-1hkies5-button-group-button-group-active-box denali-button-group"
  data-testid="buttongroup"
>
  <div
    class="css-vcvrqd-button-group-button"
    data-active="true"
  >
    Button A
  </div>
  <div
    class="css-gl4s94-button-group-button"
    data-active="false"
    id="button-b"
  >
    Button B
  </div>
  <div
    class="css-gl4s94-button-group-button"
    data-active="false"
    id="button-c"
  >
    Button C
  </div>
  <div
    class="css-gl4s94-button-group-button"
    data-active="false"
  >
    Button D
  </div>
</div>
`;

exports[`ButtonGroup should render a button group 1`] = `
<div
  class="css-d394td-button-group-button-group-active-box denali-button-group"
  data-testid="buttongroup"
>
  <div
    class="css-u4ed4m-button-group-button"
    data-active="false"
  >
    Button A
  </div>
  <div
    class="css-ngjzew-button-group-button"
    data-active="true"
    id="button-b"
  >
    Button B
  </div>
  <div
    class="css-u4ed4m-button-group-button"
    data-active="false"
    id="button-c"
  >
    Button C
  </div>
  <div
    class="css-u4ed4m-button-group-button"
    data-active="false"
  >
    Button D
  </div>
</div>
`;

exports[`ButtonGroup should render a dark button group 1`] = `
<div
  class="css-1f54y94-button-group-button-group-active-box denali-button-group"
  data-testid="buttongroup"
>
  <div
    class="css-ngjzew-button-group-button"
    data-active="true"
  >
    Button A
  </div>
  <div
    class="css-u4ed4m-button-group-button"
    data-active="false"
    id="button-b"
  >
    Button B
  </div>
  <div
    class="css-u4ed4m-button-group-button"
    data-active="false"
    id="button-c"
  >
    Button C
  </div>
  <div
    class="css-u4ed4m-button-group-button"
    data-active="false"
  >
    Button D
  </div>
</div>
`;
